# tie

./: .gitignore  Cargo.toml  README.md  test.sh
src/: app.rs  command.rs  image.rs  main.rs  palette.rs  widget.rs
src/command/: keyinput.rs  programmed.rs
src/command/keyinput/: keyconfig.rs
src/widget/: canvas.rs  palette.rs
