[package]
name = "tie"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.22.1"
png = "0.17.2"
thiserror = "1.0.30"
tui = { version = "0.16.0", default-features = false, features = ["crossterm"] }
